<resources>
    <string name="app_name">FamilyGames</string>
    <string name="s_lectionne_ton_jeu">Sélectionne ton jeu !</string>
    <string name="lancer_la_partie">Lancer la partie</string>
    <string name="voir_les_scores">Voir les scores</string>
    <string name="retour">Retour</string>
    <string name="retour_menu">Retour au menu</string>
    <string name="tumbling_dice">Tumbling Dice</string>
    <string name="skyjo">Skyjo</string>
    <string name="level_8">Level 8</string>
    <string name="combien_de_joueurs_vont_jouer">Combien de joueurs vont jouer ?</string>
    <string name="lancer_le_jeu">Lancer le jeu</string>
    <string name="toi_de_jouer">" à toi de jouer !"</string>
    <string name="d_1">Dé 1</string>
    <string name="d_2">Dé 2</string>
    <string name="d_3">Dé 3</string>
    <string name="d_4">Dé 4</string>
    <string name="d_5">Dé 5</string>
    <string name="j_ai_fais_mon_contrat">J\'ai fais mon contrat</string>
    <string name="j_ai_gagn">J\'ai gagné !</string>
    <string name="veuillez_entrer_vos_scores">Veuillez entrer vos scores</string>
    <string name="valider">Valider</string>
    <string name="family_game">Family Game</string>
    <string name="voir_les_jeux">Voir les jeux</string>
    <string name="voir_le_classement">Voir le classement</string>
    <string name="un_outil_pour_des_moments_sous_tension">Un outil pour des moments sous tension !</string>
    <string name="bravo">BRAVO</string>
    <string name="retour_au_menu">Retour au menu</string>
    <string name="rejouer">Rejouer</string>
    <string name="voici_les_scores">Voici les scores :</string>
    <string name="suivant">Suivant</string>
    <string name="voici_les_scores_pour_le_moment">Voici les scores pour le moment</string>
    <string name="calculer_les_scores">Calculer les scores</string>
    <string name="a_quel_niveau_souhaitez_vous_jouer">A quel niveau souhaitez-vous jouer ?</string>
    <string name="niveau_1">Niveau 1</string>
    <string name="niveau_2">Niveau 2</string>
    <string name="a_gagn_avec">a gagné avec</string>
    <string name="qui_doit_faire_quoi">Qui doit faire quoi ?</string>
    <string name="tour_suivant">Tour suivant</string>
    <string name="l_ordre_de_jeu_sera_la_suivant">L\'ordre de jeu sera la suivant :</string>
    <string name="jeu_skyjo">Jeu Skyjo</string>
    <string name="a_perdu">a perdu...</string>
    <string name="mais_bravo">Mais bravo à</string>
    <string name="qui_a_gagn">Qui a gagné.</string>
</resources>