<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#919191"
    tools:context=".activities.gamesactivities.skyjoactivities.SkyjoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skyjo"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/launchGameButton"
        style="@style/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lancer_la_partie"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/buttonMenu"
        style="@style/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour_au_menu"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.89" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="390dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:fadingEdge="vertical"
        android:contentDescription="@string/jeu_skyjo"
        app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.286"
        app:srcCompat="@drawable/skyjo_jeu_3"
        />
</androidx.constraintlayout.widget.ConstraintLayout>